--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tabler/icons-react": "^3.34.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.396.0",
     "luxon": "^3.6.1",
     "next": "^14.2.18",
+    "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
